# kimchi

./: README.md  logging_config.json  pyproject.toml
src/common/: log_utils.py
src/kimchi/: activity_model.py  config.py
src/nb/: activity-score.py  clean-default-schema.py  create-observations.py  kimchi-create-data.py
src/scripts/: obs_data.sql  run_activity_score.py
tests/kimchi/: test_activity_model.py
