[project]
version = "0.0.0"
requires-python = ">= 3.10"
dependencies = [
    "numpy == 1.26.4",
    "pandas == 1.5.3",
]

[project.urls]
Repository = "https://github.com/flowpay-io/reporting"

[tool.black]
line-length = 99
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
log_cli = 1
log_cli_level = "INFO"
log_level = "DEBUG"
log_format = "[%(levelname)s] %(asctime)s.%(msecs)03d %(module)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%dT%H:%M:%S"
log_file_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(message)s"
log_file_date_format = "%H:%M:%S"